# rpcsnap

./: .gitignore  Cargo.toml  README.md
docs/: dynamic_message.md  grpc.md  pipeline.md  prost_reflect.md
src/: app.rs  lib.rs  main.rs
src/grpc/: client.rs  codec.rs  mod.rs
src/proto/: loader.rs  mod.rs  model.rs
